--- a/index.html
+++ b/index.html
@@ -6,4 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <title>Document</title>
   </head>
+
+  <body>
+    <h1>
+      hola desde html
+    </h1>
+  </body>
 </html>
